<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    android:orientation="vertical"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="es.jjsr.saveforest.StartActivity"
    tools:showIn="@layout/app_bar_start">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="22dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:gravity="center_horizontal"
            android:text="@string/title"
            android:textColor="#fff"
            android:textSize="26sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:background="#fff"
            android:elevation="4dp"
            android:orientation="vertical"
            android:padding="20dp">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:paddingTop="30dp">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                                <EditText
                                    android:id="@+id/textName"
                                    android:layout_width="fill_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/write_name"
                                    android:inputType="textCapWords"
                                    android:maxLines="1" />
                        </android.support.design.widget.TextInputLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="5dp">
                                <CheckBox
                                    android:id="@+id/checkBoxCallMe"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/call_me" />
                        </LinearLayout>

                        <Button
                            android:id="@+id/next"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="22dp"
                            android:background="@color/colorAccent"
                            android:text="@string/next_activity"
                            android:textAllCaps="false"
                            android:textColor="#fff"
                            android:textSize="18sp" />
                </LinearLayout>

        </RelativeLayout>

</RelativeLayout>
<!-- android.support.v4.widget.NestedScrollView -->