<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_delete"
        android:title="@string/context_menu_delete"
        android:icon="@android:drawable/ic_menu_delete"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menu_edit"
        android:title="@string/context_menu_edit"
        android:icon="@android:drawable/ic_menu_edit"
        app:showAsAction="always"/>
</menu>