...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            style="@style/MainActivityStyle"/>

        <EditText
            android:id="@+id/updateTextDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="6"
            android:lines="6"
            android:maxLength="250"
...
